--- a/TrekBuddy/app/src/main/res/layout/fragment_guide.xml
+++ b/TrekBuddy/app/src/main/res/layout/fragment_guide.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".ui.guide.GuideFragment">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="투어할 장소를 선택해주세요: "
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--    google map 보이는 부분-->
+    <fragment
+        android:id="@+id/mapView"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"  />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/mapView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/courselist_item" />
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
