--- a/TrekBuddy/app/src/main/res/layout/fragment_profile.xml
+++ b/TrekBuddy/app/src/main/res/layout/fragment_profile.xml
@@ -4,19 +4,137 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfileFragment">
-
-    <TextView
-        android:id="@+id/text_notifications"
+    tools:context=".ui.profile.ProfileFragment"
+    android:background="#FFFFFF"
+    android:id="@+id/fragment_profile">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitStart"
+                android:src="@drawable/top_background3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:layout_marginBottom="40dp"
+                android:src="@drawable/profile"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="@+id/imageView" />
+
+            <TextView
+                android:id="@+id/nicknameView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="일이오너라"
+                android:fontFamily="@font/crab"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintHorizontal_bias="0.489"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="hi@gmail.com"
+                android:fontFamily="@font/gothic"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/nicknameView"
+                app:layout_constraintHorizontal_bias="0.489"
+                app:layout_constraintStart_toStartOf="@+id/nicknameView"
+                app:layout_constraintTop_toBottomOf="@+id/nicknameView"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/editNickButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/btn_ripple"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:text="닉네임 변경"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/gothic"
+                    android:textAlignment="viewStart"
+                    android:textSize="23sp"
+                    android:drawableStart="@drawable/setting">
+                </androidx.appcompat.widget.AppCompatButton>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/visitButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/btn_ripple"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:text="나의 방문 로그"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/gothic"
+                    android:textAlignment="viewStart"
+                    android:textSize="23sp"
+                    android:drawableStart="@drawable/visit2">
+                </androidx.appcompat.widget.AppCompatButton>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/likeButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/btn_ripple"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:text="내가 찜한 코스 보기"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/gothic"
+                    android:textAlignment="viewStart"
+                    android:textSize="23sp"
+                    android:drawableStart="@drawable/like">
+                </androidx.appcompat.widget.AppCompatButton>
+
+            </LinearLayout>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
