--- a/TrekBuddy/app/src/main/res/values/themes.xml
+++ b/TrekBuddy/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TrekBuddy" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--    <!— Base application theme. —>-->
+    <style name="Base.Theme.TrekBuddy" parent="Theme.Material3.DynamicColors.DayNight">
+    <!--        <!— Customize your light theme here. —>-->
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+<!--        <!— <item name="colorPrimary">@color/my_light_primary</item> —>-->
     </style>
-
     <style name="Theme.TrekBuddy" parent="Base.Theme.TrekBuddy" />
 </resources>
