--- a/TrekBuddy/app/src/main/res/layout/fragment_guide.xml
+++ b/TrekBuddy/app/src/main/res/layout/fragment_guide.xml
@@ -118,30 +118,47 @@
             app:layout_constraintStart_toStartOf="@+id/view"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tagTextView"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:id="@+id/tagScrollView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="#걷기좋은 #캠퍼스 #20대"
-            android:fontFamily="@font/gothic"
-            android:textSize="17sp"
-            android:textColor="#FF4682B4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toStartOf="@id/GoBackButtonToMatching"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextView
-            android:id="@+id/placesTextView"
+            <TextView
+                android:id="@+id/tagTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="#걷기좋은 #캠퍼스 #20대 #soccer #date #child #peace"
+                android:fontFamily="@font/gothic"
+                android:textSize="17sp"
+                android:textColor="#FF4682B4"/>
+        </HorizontalScrollView>
+        <HorizontalScrollView
+            android:id="@+id/PlaceScrollView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="11dp"
-            android:fontFamily="@font/gothic"
-            android:text="ECC->중앙도서관->아산공학관"
-            android:textSize="17sp"
+            android:paddingHorizontal="3dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="6dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tagTextView"/>
+            app:layout_constraintBottom_toTopOf="@id/tagScrollView">
+            <TextView
+                android:id="@+id/placesTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="11dp"
+                android:fontFamily="@font/gothic"
+                android:text="ECC->중앙도서관->아산공학관"
+                android:textSize="17sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/tagScrollView"/>
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/textView6"
