--- a/TrekBuddy/app/src/main/res/layout/fragment_visit.xml
+++ b/TrekBuddy/app/src/main/res/layout/fragment_visit.xml
@@ -10,9 +10,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="177dp">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constrainedHeight="true"
+        android:layout_marginBottom="70dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +43,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/crab"
                     android:text="나의 방문 로그"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="45dp"
                     android:textColor="@color/black"
                     android:textSize="25sp" />
             </LinearLayout>
@@ -50,7 +52,10 @@
                 android:id="@+id/visitlistView"
                 tools:listitem="@layout/viewholder_visit"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="true"
+                android:clipToPadding="false"
+                android:paddingBottom="16dp"/>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
